# swimrs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: concurrent.rs  dashmap.rs  gen_requests_smart.rs  parallel.rs  prometheus.rs  proxy.rs
src/: lib.rs  main.rs  usas.rs
src/usas/: indtimes.rs  mirror.rs  mod.rs  model.rs  toptimes.rs
swimrs/: Cargo.toml
swimrs-cli/: Cargo.toml  Cargo.toml.bak  prometheus.yml
swimrs-cli/src/: db.rs  main.rs  mirror.rs
swimrs/src/: lib.rs
swimrs/src/common/: mod.rs
swimrs/src/usas/: mod.rs  toptimes.rs
swimrs/testdata/: top_times_small.html
tests/: integration_tests.rs
