[package]
name = "swimrs"
version = "0.1.0"
authors = ["Pierce Bartine <pbar1@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "swimrs"

[lib]
name = "swimrs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
regex = "1"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = "1"
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = "2"
csv = "1.1"
log = "0.4"
env_logger = "0.9"
