[package]
name = "swimrs"
version = "0.1.0"
authors = ["Pierce Bartine <pbar1@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "swimrs"

[lib]
name = "swimrs"

[dependencies]
anyhow = "1"
async-channel = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
csv = "1.1"
env_logger = "0.9"
futures = "0.3.16"
governor = "0.3.2"
log = "0.4"
nonzero_ext = "0.2.0"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json", "cookies", "socks"] }
serde = "1"
serde_json = "1.0"
strum = { version = "0.21", features = ["derive"] }
tokio = { version = "1", features = ["full", "rt"] }
