[package]
name = "swimrs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-channel = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde"] }
clap = { version = "3", features = ["derive", "wrap_help"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" ] }
swimrs = { path = "../swimrs" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["cookies", "rustls-tls", "socks"] }
tracing = "0.1"
