[package]
name = "swimrs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-channel = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde"] }
clap = { version = "3", features = ["derive", "wrap_help"] }
csv = "1"
futures = "0.3"
metrics = "0.19"
metrics-exporter-prometheus = "0.10"
pretty_env_logger = "0.4"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "rustls-tls", "socks"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
swimrs = { path = "../swimrs" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
