[package]
name = "swimrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.10"
maplit = "1"
num_enum = "0.5"
rayon = "1"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "rustls-tls"] }
scraper = "0.13"
serde = { version = "1", features = ["derive"] }
strum = { version = "0", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt"] }
