[package]
name = "swimrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "serde"] }
itertools = { version = "0.10", default-features = false }
lazy_static = "1"
maplit = { version = "1", default-features = false }
num_enum = { version = "0.5", default-features = false, features = ["std"] }
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["cookies", "rustls-tls"] }
serde = { version = "1", default-features = false, features = ["derive"] }
strum = { version = "0", default-features = false, features = ["std", "derive"] }
tl = { version = "0.7", default-features = false, features = ["simd"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
